# vortex

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  Makefile  Makefile.config  README.md  compile_flags.txt
kernel/: .gitignore  Makefile  aarch64.h  bits.h  boot.S  config.h  debugging.c  debugging.h  exception.S  exception_context.c  exception_context.h  exception_info.h  gic_v3.c  gic_v3.h  gicv3.c  gicv3.h  irq.c  irq.h  klibc.c  klibc.h  ksyms.c  ksyms.h  linker.ld  logbuffer.c  logbuffer.h  main.c  memory.c  memory.h  panic.c  panic.h  pci.c  pci.h  printk.c  printk.h  stringutils.c  stringutils.h  symbols.c  symbols.h  timer.c  timer.h  (+4 more)
kernel/arch/aarch64/: aarch64.h  exception.S  gicv3.c  gicv3.h  halt.S  irq.c  irq.h  ksyms.c  panic.c  panic.h  timer.c
kernel/common/: stringutils.c  stringutils.h
kernel/devicetree/: devicetree.c  devicetree.h
kernel/drivers/: pci.c  pci.h  uart.c  uart.h  virtio.c
kernel/klibc/: byteswap.h  ctype.h  endian.h  stdlib.h  string.c
kernel/libc/: byteswap.h  stdlib.c  string.h
scripts/: format.sh  gen_symbols_asm.py  gen_symbols_map.sh  qemu.sh  run.py
